--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,34 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .main
 {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(357deg, rgba(1,42,133,1) 0%, rgba(30,71,95,1) 100%);
+  background: linear-gradient(357deg, rgba(1,42,133,1) 0%, rgb(28, 84, 88) 100%);
   display: flex;
-  align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 } 
 .center
 {
+  margin-top: 100px;
+  margin-bottom: 100px;
   width: 400px;
-  height: 500px;
+  min-height: 500px;
+  height: max-content;
   font-family: sans-serif;
   background: radial-gradient(circle, rgb(190, 231, 255) 0%, rgb(190, 211, 255) 76%);
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(226, 253, 255, 0.903);
+  z-index: 1;
 }
 .center h1
 {
   text-align: center;
+  margin: 10px 0 15px 0;
 }
 .inputarea
 {
@@ -99,9 +109,117 @@
 .name
 {
   position: fixed;
-  bottom: 20px;
+  bottom: 30px;
   width: 100%;
   text-align: center;
   height: 20px;
   color:aliceblue;
+}
+
+.bg-bubbles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 90%;
+  height: 70vh;
+}
+.bg-bubbles li {
+  position: absolute;
+  list-style: none;
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 0.058);
+  bottom: -200px;
+  border-radius: 10px;
+  -webkit-animation: square 25s infinite;
+  animation: square 25s infinite;
+  transition-timing-function: linear;
+}
+.bg-bubbles li:nth-child(1) {
+  left: 10%;
+}
+.bg-bubbles li:nth-child(2) {
+  left: 20%;
+  width: 80px;
+  height: 80px;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-duration: 17s;
+          animation-duration: 17s;
+}
+.bg-bubbles li:nth-child(3) {
+  left: 25%;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+.bg-bubbles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  -webkit-animation-duration: 22s;
+          animation-duration: 22s;
+  background-color: rgba(255, 255, 255, 0.426);
+}
+.bg-bubbles li:nth-child(5) {
+  left: 70%;
+}
+.bg-bubbles li:nth-child(6) {
+  left: 80%;
+  width: 120px;
+  height: 120px;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  background-color: rgba(255, 255, 255, 0.068);
+}
+.bg-bubbles li:nth-child(7) {
+  left: 32%;
+  width: 160px;
+  height: 160px;
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+}
+.bg-bubbles li:nth-child(8) {
+  left: 55%;
+  width: 20px;
+  height: 20px;
+  -webkit-animation-delay: 15s;
+          animation-delay: 15s;
+  -webkit-animation-duration: 40s;
+          animation-duration: 40s;
+}
+.bg-bubbles li:nth-child(9) {
+  left: 25%;
+  width: 10px;
+  height: 10px;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-duration: 40s;
+          animation-duration: 40s;
+  background-color: rgba(255, 255, 255, 0.25);
+}
+.bg-bubbles li:nth-child(10) {
+  left: 90%;
+  width: 160px;
+  height: 160px;
+  -webkit-animation-delay: 11s;
+          animation-delay: 11s;
+}
+@-webkit-keyframes square {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-700px) rotate(600deg);
+  }
+}
+@keyframes square {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-700px) rotate(600deg);
+  }
 }
