--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,14 @@
   margin: 10px 0;
 }
 
+.listItem .icon{
+  display: flex;
+  width: max-content;
+  height: 40px;
+  align-items: center;
+}
+
+
 .deleteicon
 {
   width: 40px;
@@ -95,8 +103,17 @@
   font-size: 20px;
   display: flex;
   align-items: center;
+  margin-left: 3px;
 }
-.deleteicon i
+.editicon i
+{
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+}
+i
 {
   color: #1d0c5a;
 }
@@ -104,6 +121,13 @@
 {
   color: #c80000;
   cursor: pointer;
+  font-size: 25px;
+}
+.editicon i:hover
+{
+  color: #007188;
+  cursor: pointer;
+  font-size: 25px;
 }
 
 .name
@@ -114,6 +138,69 @@
   text-align: center;
   height: 20px;
   color:aliceblue;
+}
+
+.listItemedit
+{
+  width: 100%;
+  height: 45px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgb(67, 82, 106);
+  background-color: aliceblue;
+  font-size: 20px;
+  text-indent: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+  border:solid 2px #007188;
+}
+
+.inputedit
+{
+  width: 80%;
+  height: 40px;
+  border: none;
+  text-indent: 10px;
+  font-size: 20px;
+}
+
+.btnsave
+{
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  font-size: 25px;
+  border: none;
+  background: transparent;
+}
+.btnsave i
+{
+  color: #00e00f;
+}
+.btnsave i:hover
+{
+  font-size: 27px;
+  cursor: pointer;
+}
+
+.btncancel
+{
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  font-size: 25px;
+  border: none;
+  background: transparent;
+}
+.btncancel i
+{
+  color: #e02200;
+}
+.btncancel i:hover
+{
+  font-size: 27px;
+  cursor: pointer;
 }
 
 .bg-bubbles {
