--- a/src/App.css
+++ b/src/App.css
@@ -210,8 +210,9 @@ i
   left: 0;
   right: 0;
   bottom: 0;
-  width: 90%;
-  height: 70vh;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 .bg-bubbles li {
   position: absolute;
